--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 annotated-types==0.6.0
 anyio==4.3.0
 certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 distro==1.9.0
 exceptiongroup==1.2.0
 fastapi==0.110.0
 h11==0.14.0
+heyoo==0.1.2
 httpcore==1.0.4
 httptools==0.6.1
 httpx==0.27.0
@@ -20,12 +22,15 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
+requests==2.31.0
+requests-toolbelt==1.0.0
 six==1.16.0
 sniffio==1.3.1
 starlette==0.36.3
 tqdm==4.66.2
 typing_extensions==4.10.0
 tzdata==2024.1
+urllib3==2.2.1
 uvicorn==0.27.1
 watchfiles==0.21.0
 websockets==12.0
